--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
 
     </LinearLayout>
 
-    <com.example.administrator.refreshrecyclerviewdemo.recycler.RefreshRecycleView
+    <com.example.administrator.refreshrecyclerviewdemo.recycler.CustomRefreshRecycleView
         android:id="@+id/rv_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
